--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -38,7 +38,7 @@ $large-desktop-width: 1200px;
         }
 
         .section2 {
-            height: 700px;
+            height: 722px;
         }
 
         .textGDP {
@@ -64,6 +64,10 @@ $large-desktop-width: 1200px;
             top: 94px;
             left: 67%;
             border-radius: 20px;
+        }
+        
+        .footer {
+            height: 110px
         }
     }
 }
@@ -161,12 +165,14 @@ $large-desktop-width: 1200px;
         .section2 {
             height: 91%;
             top: -1%;
+            margin-left: 44px;
+
         }
 
         .section3 {
             height: 100%;
         }
-        
+
         .chartText {
             text-align: center;
         }
@@ -175,11 +181,11 @@ $large-desktop-width: 1200px;
             background-color: $white;
             margin: 0;
         }
-        
+
         .graph-color {
             color: $black;
         }
-        
+
         .statisticsHeading {
             color: $black;
         }
@@ -252,6 +258,14 @@ $large-desktop-width: 1200px;
         .section {
             height: 166%
         }
+        
+        .section, .section2, .section3 {
+            margin-left: 120px
+        }
+        
+        .textHP2 {
+            padding-left: 130px
+        }
 
         .MotherTeresaImg {
             @include box(35%,
@@ -259,6 +273,35 @@ $large-desktop-width: 1200px;
             position: relative;
             left: 64%;
             top: -60px;
+        }
+        
+        .social-media-button {
+            left: -24px;
+        }
+
+        /* Style the icon bar links */
+        .social-media-button a {
+            text-align: right;
+        }
+
+        .facebook:hover {
+            background-color: rgba(59, 89, 152, .8);
+            transform: translateX(23px);
+        }
+
+        .twitter:hover {
+            background-color: rgba(85, 172, 238, .8);
+            transform: translateX(23px);
+        }
+
+        .instagram:hover {
+            background-color: rgba(253, 89, 73, .8);
+            transform: translateX(23px);
+        }
+
+        .youtube:hover {
+            background-color: rgba(187, 0, 0, .8);
+            transform: translateX(23px);
         }
     }
 }
