--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -5,7 +5,7 @@ body {
 
 
 .section2 {
-    height: 620px;
+    height: 668px;
 }
 
 
@@ -39,15 +39,16 @@ body {
 }
 
 .textHP1 {
-    color: $black;
+    color: #000000;
     padding-left: 10px;
     margin-top: 100px;
+    margin-left: 18px;
 }
 
 .textHP2 {
     color: $white;
     padding-top: 150px;
-    padding-left: 10px;
+    padding-left: 60px;
 }
 
 .more {
