--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,9 @@
 
 @import "components/buttons.scss";
 @import "components/navigation.scss";
+@import "components/footer.scss";
+@import "components/aside.scss";
+
 
 @import "pages/charities.scss";
 @import "pages/homepage.scss";
