--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -66,6 +66,10 @@ $large-desktop-width: 1200px;
             border-radius: 20px;
         }
         
+        .social-media-button {
+            width: 5.5%;
+        }
+        
         .footer {
             height: 110px
         }
@@ -276,7 +280,7 @@ $large-desktop-width: 1200px;
         }
         
         .social-media-button {
-            left: -24px;
+            left: -25px;
         }
 
         /* Style the icon bar links */
