--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -1,19 +1,41 @@
 #footer {
-    width: 100%;
-    height: 150px;
-    margin-top: 58px;
+  width: 100%;
+  height: 300px;
+  margin-top: 58px;
+  background-color: $white;
 }
 
 .footer-list {
-    list-style: none;
-    padding: 0;
-    color: $black;
+  list-style: none;
+  padding: 0;
+  color: $black;
 }
 
 .footer-link {
-    color: $black!important;
+  color: #000000;
+  text-decoration: none;
 }
 
+
 .footer-link:hover {
-    text-decoration: none !important;
+  color: $blue;
+  text-decoration: none;
 }
+
+.social-media-icons-footer {
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+  margin-top: 4px;
+}
+
+.facebook-footer {
+  color: white;
+}
+
+.twitter-footer {}
+
+.instagram-footer {}
+
+.youtube-footer {}
