--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,18 @@
     opacity: 0; }
   to {
     opacity: 1; } }
-.fa-facebook, .fa-twitter, .fa-youtube, .fa-instagram {
+.facebook-aside, .twitter-aside, .youtube-aside, .instagram-aside {
   margin-left: -14px; }
+
+.facebook-footer, .twitter-footer, .youtube-footer, .instagram-footer {
+  width: 40px;
+  height: 40px;
+  list-style: none;
+  line-height: 40px;
+  font-size: 20px;
+  border: 1px solid blue;
+  border-radius: 50%;
+  text-align: center; }
 
 .charity-collapse {
   width: 100%;
@@ -187,8 +197,9 @@
 
 #footer {
   width: 100%;
-  height: 150px;
-  margin-top: 58px; }
+  height: 300px;
+  margin-top: 58px;
+  background-color: #FFFFFF; }
 
 .footer-list {
   list-style: none;
@@ -196,16 +207,28 @@
   color: #000000; }
 
 .footer-link {
-  color: #000000 !important; }
+  color: #000000;
+  text-decoration: none; }
 
 .footer-link:hover {
-  text-decoration: none !important; }
+  color: #0188FE;
+  text-decoration: none; }
+
+.social-media-icons-footer {
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+  margin-top: 4px; }
+
+.facebook-footer {
+  color: white; }
 
 /* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
 .social-media-button {
   position: fixed;
   top: 50%;
-  width: 5.5%;
+  width: 10%;
   transform: translateY(-50%); }
 
 /* Style the icon bar links */
@@ -450,6 +473,9 @@ body {
     left: 67%;
     border-radius: 20px; }
 
+  .social-media-button {
+    width: 5.5%; }
+
   .footer {
     height: 110px; } }
 @media (min-width: 768px) {
@@ -609,7 +635,7 @@ body {
     top: -60px; }
 
   .social-media-button {
-    left: -24px; }
+    left: -25px; }
 
   /* Style the icon bar links */
   .social-media-button a {
