--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -2,13 +2,25 @@ $white: #FFFFFF;
 $blue: #0188FE;
 $lightBlue: #01C3FE;
 $skyblue: #D6FEFE;
-$donateBodyBlue: #2098d1;
-$HPBGgrey: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
 $orange: #FEB624;
 $darkerGreen: #11fe00;
 $green: #8ffe00;
 $black: #000000;
-$navbarBlue: #007bff;
 $lightYellow: #FEF9B4;
 $grey: rgb(224,224,224);
 $red: #FE7979;
+
+$navbarBlue: #007bff;
+
+$BodyBlue: #2098d1;
+
+//Social Media Buttons
+$facebookHover: rgba(59, 89, 152, .8);
+$twitterHover: rgba(85, 172, 238, .8);
+$instagramHover: rgba(253, 89, 73, .8);
+$youtubeHover: rgba(187, 0, 0, .8);
+
+$facebookBGColor: #3B5998;
+$twitterBGColor: #55ACEE;
+$instagramBGColor: #fd5949;
+$youtubeBGColor: #bb0000;
