Made changes in the codes for the dragging effect on the 'Donate' page.

--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -28,8 +28,13 @@
 
 // Calculator
 
+#calculatorSection {
+    z-index: 9;
+}
 
-//new
+#calculatorSectionHeader {
+    z-index: 10;
+}
 
 .calcTextBG {
     cursor: move;
