--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -286,8 +286,8 @@ $large-desktop-width: 1200px;
             left: -25px;
         }
 
-        .social-media-button a {
-            text-align: right;
+        .sideCalculator:hover {
+            transform: translateX(23px) translateY(-50%);
         }
 
         .facebook:hover {
