--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -15,11 +15,13 @@ $navbarBlue: #007bff;
 $BodyBlue: #2098d1;
 
 //Social Media Buttons
+$sideCalculatorHover: rgba(102,51,153, .8);
 $facebookHover: rgba(59, 89, 152, .8);
 $twitterHover: rgba(85, 172, 238, .8);
 $instagramHover: rgba(253, 89, 73, .8);
 $youtubeHover: rgba(187, 0, 0, .8);
 
+$sideCalculatorColor: #663399;
 $facebookBGColor: #3B5998;
 $twitterBGColor: #55ACEE;
 $instagramBGColor: #fd5949;
