--- a/assets/css/components/aside.scss
+++ b/assets/css/components/aside.scss
@@ -7,20 +7,15 @@
   transform: translateY(-50%);
 }
 
-/* Icon links */
 
-.social-media-button a {
-  display: block;
-  text-align: center;
-  padding: 16px;
-  transition: all 0.3s ease;
-  color: white;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
-  font-size: 23px;
-}
+
+
 
 /* Social Media Icons*/
+
+.sideCalculator:hover {
+  background-color: $sideCalculatorHover;
+}
 
 .facebook:hover {
   background-color: $facebookHover;
@@ -56,4 +51,11 @@
 .youtube {
   background: $youtubeBGColor;
   color: $white;
+}
+
+
+.sideCalculator {
+  transform: translateY(-50%);
+  background-color: $sideCalculatorColor;
+  color: white;
 }
