Edited the textbox of contact.html and a new aside button of donate.html.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,8 @@
   color: #FFFFFF; }
 
 #calculatorSection {
+  display: flex;
+  justify-content: center;
   z-index: 9; }
 
 #calculatorSectionHeader {
