--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -33,6 +33,8 @@
     display: flex;
     justify-content: center;
     z-index: 9;
+    width: 20%;
+    left: 70px;
 }
 
 #calculatorSectionHeader {
