--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,10 +123,7 @@
   background-size: 100%, 100%;
   border-radius: 50%; }
 
-/*Aside Social Media Buttons*/
-.calculator-aside, .facebook-aside, .twitter-aside, .youtube-aside, .instagram-aside {
-  margin-left: -14px; }
-
+/*Aside Styles*/
 .social-media-button a, .social-media-button div {
   display: block;
   text-align: center;
@@ -172,9 +169,12 @@
   color: #FFFFFF; }
 
 #calculatorSection {
+  position: absolute;
   display: flex;
   justify-content: center;
-  z-index: 9; }
+  z-index: 9;
+  width: 20%;
+  left: 70px; }
 
 #calculatorSectionHeader {
   z-index: 10; }
@@ -268,7 +268,7 @@
 .social-media-button {
   position: fixed;
   top: 50%;
-  width: 10%;
+  width: 50%;
   transform: translateY(-50%); }
 
 /* Social Media Icons*/
@@ -307,6 +307,10 @@
   transform: translateY(-50%);
   background-color: #663399;
   color: white; }
+
+.asideCalcText {
+  font-size: 12px;
+  vertical-align: middle; }
 
 #bodyColor {
   background-color: #2098d1; }
@@ -427,6 +431,9 @@ body {
   margin: auto;
   padding: 20px 0; }
 
+.text-box-length {
+  width: 100%; }
+
 .formsSubmit {
   margin: 10px 44%; }
 
@@ -507,7 +514,10 @@ body {
     width: 5.5%; }
 
   #footer {
-    height: 110px; } }
+    height: 110px; }
+
+  .text-box-length {
+    width: 500px; } }
 @media (min-width: 768px) {
   /*Homepage*/
   .hpimg-2 {
@@ -599,7 +609,10 @@ body {
     color: #000000; }
 
   .statisticsHeading {
-    color: #000000; } }
+    color: #000000; }
+
+  .text-box-length {
+    width: 650px; } }
 @media (min-width: 1200px) {
   /*Homepage*/
   .hpimg-2 {
@@ -667,9 +680,10 @@ body {
     top: -60px; }
 
   .social-media-button {
-    left: -25px; }
+    left: -35px; }
 
   .sideCalculator:hover {
+    background-color: rgba(102, 51, 153, 0.8);
     transform: translateX(23px) translateY(-50%); }
 
   .facebook:hover {
@@ -689,6 +703,9 @@ body {
     transform: translateX(23px); }
 
   #statistics-article {
-    padding-right: 50px; } }
+    padding-right: 50px; }
+
+  .text-box-length {
+    width: 1100px; } }
 
 /*# sourceMappingURL=style.css.map */
