--- a/assets/css/helpers/helpers.scss
+++ b/assets/css/helpers/helpers.scss
@@ -44,11 +44,11 @@
     margin: 15px 0;
     padding: 1em 0;
     position: relative;
-    margin-left: 44px;
     color: white;
     top: 12%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 2%;
+    height: auto;
 }
 
 .section {
