--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -10,20 +10,10 @@ $large-desktop-width: 1200px;
             font-size: 26px;
         }
 
-        #hptextimg-1 {
-            @include box(350px,
-            185px);
-            position: relative;
-            top: 24%;
-            z-index: 1;
-        }
-
-        #hptextimg-4 {
-            @include box(350px,
-            185px);
-            top: -8%;
-            position: relative;
-            z-index: 0;
+        .section,
+        .section2,
+        .section3 {
+            margin-left: 44px;
         }
 
         .headerGDP {
@@ -34,10 +24,6 @@ $large-desktop-width: 1200px;
 
         .text2 {
             font-size: 26px;
-        }
-
-        .section2 {
-            height: 722px;
         }
 
         .textGDP {
@@ -55,14 +41,6 @@ $large-desktop-width: 1200px;
             color: $white;
             position: relative;
             padding-bottom: 37px;
-        }
-
-        .MotherTeresaImg {
-            @include box(32%,
-            129px);
-            top: 94px;
-            left: 67%;
-            border-radius: 20px;
         } //Statistics Texts
         .chartText {
             margin-left: 10%;
@@ -99,30 +77,6 @@ $large-desktop-width: 1200px;
         .hpimg-4 {
             height: 975px;
         }
-        #hptextimg-1 {
-            height: 200px;
-            top: 75px;
-            left: 30%;
-        }
-
-        #hptextimg-2 {
-            top: -56px;
-            height: 204px;
-        }
-
-        #hptextimg-3 {
-            height: 239px;
-            top: 8%;
-            left: 72px;
-            position: relative;
-        }
-
-        #hptextimg-4 {
-            top: 3%;
-            left: 30%;
-            height: 230px;
-            position: relative;
-        }
 
         .header {
             margin-top: 9px;
@@ -156,31 +110,13 @@ $large-desktop-width: 1200px;
             padding-bottom: 197px;
         }
 
-
-        .MotherTeresaImg {
-            @include box(35%,
-            167px);
-            position: relative;
-            left: 64%;
-            top: -60px;
-        }
         .textHP1 {
             margin-top: 0;
         }
 
-        .section {
-            height: 168%;
-        }
-
         .section2 {
-            height: 91%;
             top: -1%;
             margin-left: 44px;
-
-        }
-
-        .section3 {
-            height: 100%;
         } //Statistics Page
         .chartText {
             text-align: center;
@@ -226,18 +162,6 @@ $large-desktop-width: 1200px;
             height: 1000px;
         }
 
-        #hptextimg-1 {
-            height: 200px;
-            top: 75px;
-            left: 30%;
-        }
-
-        #hptextimg-2 {
-            top: -56%;
-            height: 400px;
-            position: relative;
-        }
-
         .text {
             font-size: 30px;
         }
@@ -257,20 +181,6 @@ $large-desktop-width: 1200px;
             margin-top: 100px;
         }
 
-        #hptextimg-3 {
-            height: 400px;
-        }
-
-        #hptextimg-4 {
-            height: 360px;
-            width: 30%;
-            left: 36%;
-        }
-
-        .section {
-            height: 166%
-        }
-
         .section,
         .section2,
         .section3 {
@@ -279,14 +189,6 @@ $large-desktop-width: 1200px;
 
         .textHP2 {
             padding-left: 130px
-        }
-
-        .MotherTeresaImg {
-            @include box(35%,
-            250px);
-            position: relative;
-            left: 64%;
-            top: -60px;
         } //Aside Social Media Buttons
         .social-media-button {
             left: -35px;
@@ -315,7 +217,7 @@ $large-desktop-width: 1200px;
         .youtube:hover {
             background-color: $youtubeHover;
             transform: translateX(23px);
-        } //Statistics Page 
+        } //Statistics Page
         #statistics-article {
             padding-right: 50px;
         } // Contact Page
