Changed the position of the calculator to be fixed.

--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -27,14 +27,16 @@
 
 
 // Calculator
-
-#calculatorSection {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    z-index: 9;
+#calculator-wrapper {
+    position: fixed;
+    z-index: 999;
     width: 20%;
-    left: 70px;
+    left: 40%;
+    bottom: 70%;
+}
+
+.calculatorSection {
+    position: absolute;
 }
 
 #calculatorSectionHeader {
@@ -43,6 +45,9 @@
 
 .calcTextBG {
     cursor: move;
+    padding: 0;
+    width: 91%;
+    left: 5%;
     background-color: lightblue;
     border: 1px solid blue;
     border-top-right-radius: 10px;
