--- a/assets/css/pages/charities.scss
+++ b/assets/css/pages/charities.scss
@@ -7,6 +7,18 @@
     color: white;
 }
 
+#AsiaAfricaSection {
+    padding: 5% 0;
+}
+
+#SAEuropeCharities {
+    padding: 10% 0;
+}
+
+#NAAusCharities {
+    padding: 12% 0;
+}
+
 .charity-text {
     padding: 0 18px;
     white-space: pre-line;
