Changed and redesigned a few texts on some of the web pages and styled the submission button on contact.html.

--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -101,4 +101,10 @@
 
 .calcBtnRed {
     background: red;
+} //Contact Page
+#submitBtn {
+    background-color: $blue;
+    color: $white;
+    display: flex;
+    align-content: flex-end;
 }
