--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -1,3 +1,30 @@
+
+//Homepage
+.donateButtonStyleHP {
+    height: 70px;
+    font-size: 35px;
+    opacity: 0.7;
+    border: solid #FFF;
+    border-radius: 10px;
+    transition: 0.2s;
+    background-image: linear-gradient(#17a2b8, #01557b);
+    color: $white;
+    border: none;
+}
+
+.donateButtonStyleHP:hover {
+    opacity: 1;
+    border: solid #FFF;
+    color: $white;
+}
+
+.readBtn {
+    background-image: linear-gradient(#17a2b8, #01557b);
+    color: white;
+    border: none;
+}
+
+//Donate Page
 .charity-collapse {
     width: 100%;
     font-size: 15px;
@@ -103,7 +130,7 @@
     background: red;
 } //Contact Page
 #submitBtn {
-    background-color: $blue;
+    background-image: linear-gradient(#17a2b8, #01557b);
     color: $white;
     display: flex;
     align-content: flex-end;
