Redesigned the texts and buttons on the homepage.

--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -8,6 +8,7 @@ $large-desktop-width: 1200px;
         .textHP1 {
             padding-top: 33%;
             font-size: 26px;
+            margin-top: 100px;
         }
 
         .section,
