--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -10,6 +10,8 @@
     background-image: linear-gradient(#17a2b8, #01557b);
     color: $white;
     border: none;
+    margin: 5% 0;
+    font-weight: 600;
 }
 
 .donateButtonStyleHP:hover {
@@ -132,6 +134,4 @@
 #submitBtn {
     background-image: linear-gradient(#17a2b8, #01557b);
     color: $white;
-    display: flex;
-    align-content: flex-end;
 }
