--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -11,10 +11,31 @@ body {
     height: auto;
 }
 
-
+.header {
+    font-weight: 800;
+}
 .headerGDP {
     color: $white;
     top: 7px;
+    font-weight: 800;
+}
+
+.textHP1 {
+    color: #000000;
+    padding-left: 10px;
+    margin-top: 68px;
+    margin-left: 18px;
+    font-weight: 600;
+}
+
+.textHP2 {
+    color: $white;
+    padding-top: 150px;
+    font-weight: 600;
+}
+
+.text2 {
+    font-weight: 600;
 }
 
 .textGDP {
@@ -22,6 +43,7 @@ body {
     top: 82px;
     padding-right: 10px;
     color: $white;
+    font-weight: 600;
 }
 
 .MotherTeresaQuote {
@@ -31,22 +53,11 @@ body {
     font-style: italic;
 }
 
-.textHP1 {
-    color: #000000;
-    padding-left: 10px;
-    margin-top: 100px;
-    margin-left: 18px;
-}
-
-.textHP2 {
-    color: $white;
-    padding-top: 150px;
-}
-
 .more {
     display: none;
 }
 
 .underline {
     text-decoration: underline;
+
 }
