--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -9,6 +9,8 @@ $large-desktop-width: 1200px;
             padding-top: 33%;
             font-size: 26px;
             margin-top: 100px;
+            margin-left: 18px;
+            padding-left: 10px;
         }
 
         .section,
@@ -36,7 +38,7 @@ $large-desktop-width: 1200px;
         }
 
         .MotherTeresaQuote {
-            top: 135px;
+            top: 75px;
             font-size: 20px;
             text-transform: uppercase;
             color: $white;
@@ -118,9 +120,17 @@ $large-desktop-width: 1200px;
             margin-top: 0;
         }
 
+        .section {
+            top: 40%;
+        }
+
         .section2 {
-            top: -1%;
+            top: 8%;
             margin-left: 44px;
+        }
+
+        .section3 {
+            top: 60%;
         } //Statistics Page
         .chartText {
             text-align: center;
